<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/secondary"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:contentDescription=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="!0dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="A propos de MOI"
                        android:layout_marginBottom="30dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold">
                    </TextView>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/about_text_information"
                        android:layout_marginBottom="26dp"
                        android:textColor="@color/white"
                        android:textSize="22dp"
                        android:textStyle="bold">
                    </TextView>
                </TableRow>

                <TableRow>
                    <TableRow
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="Prénom :"
                            android:textSize="18dp"
                            android:width="220dp"
                            android:textColor="@color/white">
                        </TextView>
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="Nom :"
                            android:textSize="18dp"
                            android:width="190dp"
                            android:textColor="@color/white">
                        </TextView>
                    </TableRow>
                </TableRow>
                <TableRow>
                    <TableRow
                        android:layout_marginBottom="30dp">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_prenom_title_"
                            android:textSize="22dp"
                            android:width="220dp"
                            android:textColor="@color/white"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_nom_title"
                            android:textSize="22dp"
                            android:width="190dp"
                            android:textColor="@color/white"
                            android:textStyle="bold">
                        </TextView>
                    </TableRow>
                </TableRow>
                <TableRow>
                    <TableRow
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_nationalite_sub_title"
                            android:textSize="18dp"
                            android:width="220dp"
                            android:textColor="@color/white">
                        </TextView>
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_age_sub_title"
                            android:textSize="18dp"
                            android:width="190dp"
                            android:textColor="@color/white">
                        </TextView>
                    </TableRow>
                </TableRow>
                <TableRow>
                    <TableRow
                        android:layout_marginBottom="30dp">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_nationalie"
                            android:textSize="22dp"
                            android:width="220dp"
                            android:textColor="@color/white"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_age"
                            android:textSize="22dp"
                            android:width="190dp"
                            android:textColor="@color/white"
                            android:textStyle="bold">
                        </TextView>
                    </TableRow>
                </TableRow>
                <TableRow>
                    <TableRow
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_pays_sub_title"
                            android:textSize="18dp"
                            android:width="220dp"
                            android:textColor="@color/white">
                        </TextView>
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_ville_sub_title"
                            android:textSize="18dp"
                            android:width="190dp"
                            android:textColor="@color/white">
                        </TextView>
                    </TableRow>
                </TableRow>
                <TableRow>
                    <TableRow
                        android:layout_marginBottom="30dp">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_pays"
                            android:textSize="22dp"
                            android:width="220dp"
                            android:textColor="@color/white"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_ville"
                            android:textSize="22dp"
                            android:width="190dp"
                            android:textColor="@color/white"
                            android:textStyle="bold">
                        </TextView>
                    </TableRow>
                </TableRow>
                <TableRow>
                    <TableRow
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_langues_sub_title"
                            android:textSize="18dp"
                            android:width="220dp"
                            android:textColor="@color/white">
                        </TextView>
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_tel_m_sub_title"
                            android:textSize="18dp"
                            android:width="190dp"
                            android:textColor="@color/white">
                        </TextView>
                    </TableRow>
                </TableRow>
                <TableRow>
                    <TableRow
                        android:layout_marginBottom="30dp">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_langues"
                            android:textSize="22dp"
                            android:width="220dp"
                            android:textColor="@color/white"
                            android:textStyle="bold">
                        </TextView>
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/about_tel"
                            android:textSize="22dp"
                            android:width="190dp"
                            android:textColor="@color/white"
                            android:textStyle="bold">
                        </TextView>
                    </TableRow>
                </TableRow>
                <TableRow>
                    <TableRow
                        android:id="@+id/cv"
                        android:layout_marginBottom="30dp">
                        <Button
                            android:layout_width="290dp"
                            android:layout_height="60dp"
                            android:background="@drawable/boarder"
                            android:hint="Télécharger le CV"
                            android:paddingLeft="45dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            android:textSize="22dp" />
                    </TableRow>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/HomeBtnHome"
                    android:layout_width="82dp"
                    android:layout_height="86dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/secondary"
                    app:srcCompat="@drawable/home2" />

                <ImageButton
                    android:id="@+id/HomeBtnAbout"
                    android:layout_width="82dp"
                    android:layout_height="86dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/secondary"
                    app:srcCompat="@drawable/about2" />

                <ImageButton
                    android:id="@+id/HomeBtnContact"
                    android:layout_width="82dp"
                    android:layout_height="86dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/secondary"
                    app:srcCompat="@drawable/contact1" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
